Added movie files from learn-co repo

--- a/Flatiron Mod 1 Proj Research Questions.ipynb
+++ b/Flatiron Mod 1 Proj Research Questions.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Sure we can make a list of the most profitable genres, but ultimately the budget allocated by microsoft will determine the genre to start with \n",
-    "\n",
-    "\n",
+    "Sachin\n",
     "Different budgets will yield different margins\n",
     "\n",
     "\n",
