added EDA_project file manually

--- a/EDA_project1.ipynb
+++ b/EDA_project1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +93,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Movie Rating</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Gross Income</th>\n",
+       "      <th>Movie Genre</th>\n",
+       "      <th>Movie Runtime</th>\n",
+       "      <th>IMDb Rating</th>\n",
+       "      <th>Votes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>500 Days of Summer</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>32.39</td>\n",
+       "      <td>[['Comedy'], [' Drama'], [' Romance']]</td>\n",
+       "      <td>95</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>461975.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>12 Years a Slave</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>56.67</td>\n",
+       "      <td>[['Biography'], [' Drama'], [' History']]</td>\n",
+       "      <td>134</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>620072.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>127 Hours</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>18.34</td>\n",
+       "      <td>[['Biography'], [' Drama']]</td>\n",
+       "      <td>94</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>340542.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1917</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>159.23</td>\n",
+       "      <td>[['Drama'], [' War']]</td>\n",
+       "      <td>119</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>341663.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2001: A Space Odyssey</td>\n",
+       "      <td>G</td>\n",
+       "      <td>1968</td>\n",
+       "      <td>56.95</td>\n",
+       "      <td>[['Adventure'], [' Sci-Fi']]</td>\n",
+       "      <td>149</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>583084.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Title Movie Rating  Year  Gross Income  \\\n",
+       "0     500 Days of Summer        PG-13  2009         32.39   \n",
+       "1       12 Years a Slave            R  2013         56.67   \n",
+       "2              127 Hours            R  2010         18.34   \n",
+       "3                   1917            R  2019        159.23   \n",
+       "4  2001: A Space Odyssey            G  1968         56.95   \n",
+       "\n",
+       "                                 Movie Genre  Movie Runtime  IMDb Rating  \\\n",
+       "0     [['Comedy'], [' Drama'], [' Romance']]             95          7.7   \n",
+       "1  [['Biography'], [' Drama'], [' History']]            134          8.1   \n",
+       "2                [['Biography'], [' Drama']]             94          7.6   \n",
+       "3                      [['Drama'], [' War']]            119          8.3   \n",
+       "4               [['Adventure'], [' Sci-Fi']]            149          8.3   \n",
+       "\n",
+       "      Votes  \n",
+       "0  461975.0  \n",
+       "1  620072.0  \n",
+       "2  340542.0  \n",
+       "3  341663.0  \n",
+       "4  583084.0  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"Setting the information from above to a dataframe to manipulate and visualize\"\"\"\n",
     "df = pd.DataFrame({'Title': title,'Movie Rating': movie_rating,'Year': year,\n",
@@ -107,36 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0            ['Comedy', ' Drama', ' Romance']\n",
-       "1         ['Biography', ' Drama', ' History']\n",
-       "2                     ['Biography', ' Drama']\n",
-       "3                           ['Drama', ' War']\n",
-       "4                    ['Adventure', ' Sci-Fi']\n",
-       "                        ...                  \n",
-       "751           ['Drama', ' History', ' Music']\n",
-       "752           ['Crime', ' Drama', ' Mystery']\n",
-       "753      ['Adventure', ' Comedy', ' Fantasy']\n",
-       "754    ['Animation', ' Adventure', ' Comedy']\n",
-       "755            ['Drama', ' Thriller', ' War']\n",
-       "Name: Movie Genre, Length: 756, dtype: object"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -185,50 +275,50 @@
        "      <td>PG-13</td>\n",
        "      <td>2009</td>\n",
        "      <td>32.39</td>\n",
-       "      <td>['Comedy', ' Drama', ' Romance']</td>\n",
+       "      <td>[['Comedy'], [' Drama'], [' Romance']]</td>\n",
        "      <td>95</td>\n",
        "      <td>7.7</td>\n",
-       "      <td>461968.0</td>\n",
+       "      <td>461975.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>12 Years a Slave</td>\n",
        "      <td>R</td>\n",
        "      <td>2013</td>\n",
        "      <td>56.67</td>\n",
-       "      <td>['Biography', ' Drama', ' History']</td>\n",
+       "      <td>[['Biography'], [' Drama'], [' History']]</td>\n",
        "      <td>134</td>\n",
        "      <td>8.1</td>\n",
-       "      <td>620057.0</td>\n",
+       "      <td>620072.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>127 Hours</td>\n",
        "      <td>R</td>\n",
        "      <td>2010</td>\n",
        "      <td>18.34</td>\n",
-       "      <td>['Biography', ' Drama']</td>\n",
+       "      <td>[['Biography'], [' Drama']]</td>\n",
        "      <td>94</td>\n",
        "      <td>7.6</td>\n",
-       "      <td>340533.0</td>\n",
+       "      <td>340542.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1917</td>\n",
        "      <td>R</td>\n",
        "      <td>2019</td>\n",
        "      <td>159.23</td>\n",
-       "      <td>['Drama', ' War']</td>\n",
+       "      <td>[['Drama'], [' War']]</td>\n",
        "      <td>119</td>\n",
        "      <td>8.3</td>\n",
-       "      <td>341593.0</td>\n",
+       "      <td>341663.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2001: A Space Odyssey</td>\n",
        "      <td>G</td>\n",
        "      <td>1968</td>\n",
        "      <td>56.95</td>\n",
-       "      <td>['Adventure', ' Sci-Fi']</td>\n",
+       "      <td>[['Adventure'], [' Sci-Fi']]</td>\n",
        "      <td>149</td>\n",
        "      <td>8.3</td>\n",
-       "      <td>583079.0</td>\n",
+       "      <td>583084.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
@@ -245,50 +335,50 @@
        "      <td>R</td>\n",
        "      <td>2018</td>\n",
        "      <td>4.57</td>\n",
-       "      <td>['Drama', ' History', ' Music']</td>\n",
+       "      <td>[['Drama'], [' History'], [' Music']]</td>\n",
        "      <td>89</td>\n",
        "      <td>7.6</td>\n",
-       "      <td>44907.0</td>\n",
+       "      <td>44910.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Zodiac</td>\n",
        "      <td>R</td>\n",
        "      <td>2007</td>\n",
        "      <td>33.08</td>\n",
-       "      <td>['Crime', ' Drama', ' Mystery']</td>\n",
+       "      <td>[['Crime'], [' Drama'], [' Mystery']]</td>\n",
        "      <td>157</td>\n",
        "      <td>7.7</td>\n",
-       "      <td>437514.0</td>\n",
+       "      <td>437544.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Zombieland</td>\n",
        "      <td>R</td>\n",
        "      <td>2009</td>\n",
        "      <td>75.59</td>\n",
-       "      <td>['Adventure', ' Comedy', ' Fantasy']</td>\n",
+       "      <td>[['Adventure'], [' Comedy'], [' Fantasy']]</td>\n",
        "      <td>88</td>\n",
        "      <td>7.6</td>\n",
-       "      <td>507625.0</td>\n",
+       "      <td>507635.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Zootopia</td>\n",
        "      <td>PG</td>\n",
        "      <td>2016</td>\n",
        "      <td>341.27</td>\n",
-       "      <td>['Animation', ' Adventure', ' Comedy']</td>\n",
+       "      <td>[['Animation'], [' Adventure'], [' Comedy']]</td>\n",
        "      <td>108</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>417501.0</td>\n",
+       "      <td>417513.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Black Book</td>\n",
        "      <td>R</td>\n",
        "      <td>2006</td>\n",
        "      <td>4.40</td>\n",
-       "      <td>['Drama', ' Thriller', ' War']</td>\n",
+       "      <td>[['Drama'], [' Thriller'], [' War']]</td>\n",
        "      <td>145</td>\n",
        "      <td>7.7</td>\n",
-       "      <td>71224.0</td>\n",
+       "      <td>71226.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -310,38 +400,38 @@
        "Zootopia                        PG  2016        341.27   \n",
        "Black Book                       R  2006          4.40   \n",
        "\n",
-       "                                                  Movie Genre  Movie Runtime  \\\n",
-       "Title                                                                          \n",
-       "500 Days of Summer           ['Comedy', ' Drama', ' Romance']             95   \n",
-       "12 Years a Slave          ['Biography', ' Drama', ' History']            134   \n",
-       "127 Hours                             ['Biography', ' Drama']             94   \n",
-       "1917                                        ['Drama', ' War']            119   \n",
-       "2001: A Space Odyssey                ['Adventure', ' Sci-Fi']            149   \n",
-       "...                                                       ...            ...   \n",
-       "Cold War                      ['Drama', ' History', ' Music']             89   \n",
-       "Zodiac                        ['Crime', ' Drama', ' Mystery']            157   \n",
-       "Zombieland               ['Adventure', ' Comedy', ' Fantasy']             88   \n",
-       "Zootopia               ['Animation', ' Adventure', ' Comedy']            108   \n",
-       "Black Book                     ['Drama', ' Thriller', ' War']            145   \n",
+       "                                                        Movie Genre  \\\n",
+       "Title                                                                 \n",
+       "500 Days of Summer           [['Comedy'], [' Drama'], [' Romance']]   \n",
+       "12 Years a Slave          [['Biography'], [' Drama'], [' History']]   \n",
+       "127 Hours                               [['Biography'], [' Drama']]   \n",
+       "1917                                          [['Drama'], [' War']]   \n",
+       "2001: A Space Odyssey                  [['Adventure'], [' Sci-Fi']]   \n",
+       "...                                                             ...   \n",
+       "Cold War                      [['Drama'], [' History'], [' Music']]   \n",
+       "Zodiac                        [['Crime'], [' Drama'], [' Mystery']]   \n",
+       "Zombieland               [['Adventure'], [' Comedy'], [' Fantasy']]   \n",
+       "Zootopia               [['Animation'], [' Adventure'], [' Comedy']]   \n",
+       "Black Book                     [['Drama'], [' Thriller'], [' War']]   \n",
        "\n",
-       "                       IMDb Rating     Votes  \n",
-       "Title                                         \n",
-       "500 Days of Summer             7.7  461968.0  \n",
-       "12 Years a Slave               8.1  620057.0  \n",
-       "127 Hours                      7.6  340533.0  \n",
-       "1917                           8.3  341593.0  \n",
-       "2001: A Space Odyssey          8.3  583079.0  \n",
-       "...                            ...       ...  \n",
-       "Cold War                       7.6   44907.0  \n",
-       "Zodiac                         7.7  437514.0  \n",
-       "Zombieland                     7.6  507625.0  \n",
-       "Zootopia                       8.0  417501.0  \n",
-       "Black Book                     7.7   71224.0  \n",
+       "                       Movie Runtime  IMDb Rating     Votes  \n",
+       "Title                                                        \n",
+       "500 Days of Summer                95          7.7  461975.0  \n",
+       "12 Years a Slave                 134          8.1  620072.0  \n",
+       "127 Hours                         94          7.6  340542.0  \n",
+       "1917                             119          8.3  341663.0  \n",
+       "2001: A Space Odyssey            149          8.3  583084.0  \n",
+       "...                              ...          ...       ...  \n",
+       "Cold War                          89          7.6   44910.0  \n",
+       "Zodiac                           157          7.7  437544.0  \n",
+       "Zombieland                        88          7.6  507635.0  \n",
+       "Zootopia                         108          8.0  417513.0  \n",
+       "Black Book                       145          7.7   71226.0  \n",
        "\n",
        "[756 rows x 7 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,29 +442,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Title            755\n",
-       "Movie Rating      11\n",
-       "Year              78\n",
-       "Gross Income     672\n",
-       "Movie Genre      170\n",
-       "Movie Runtime    123\n",
-       "IMDb Rating       17\n",
-       "Votes            707\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"df.csv\",index=False)"
+   ]
   },
   {
    "cell_type": "code",
